[package]
name = "jaat"
description = "match recording"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-web = "0.4.0"
jaat-controller = {path = "./jaat-controller/"}
log = "0.4.20"
wasm-logger = "0.2.0"
dioxus = "0.4.0"
dioxus-router = "0.4.1"

[workspace]
members = [".", "./jaat-core/","./jaat-usecase/","./jaat-controller/","./jaat-data/"]
